# hevosol

./: LICENSE  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
doc/: INSTALL.clean  README
src/: Makefile.am  Makefile.in  main.c
src/libhvs/: errorutil.c  errorutil.h  factorialutil.c  factorialutil.h  fileutil.c  fileutil.h  gentypes.h  gmres.c  gmres.h  he05.c  he07.c  he10.c  hermiteutil.c  hermiteutil.h  hevosol.c  hevosol.h  hvs_multi_moments.c  hvs_one_moment.c  hvs_two_moments.c  matrixutil.c  matrixutil.h  odesolvers.c  odesolvers.h  vectorutil.c  vectorutil.h
src/test/: test_gmres.c  test_matrixutil.c  test_solver.c
